cluster/platform/authentik/authentik-application/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: authentik-outpost
spec:
  rules:
  - host: authentik.rwcloud.org
    http:
      paths:
      - backend:
          service:
            name: ak-outpost-authentik-embedded-outpost
            port:
              number: 9000
        path: /outpost.goauthentik.io
        pathType: Prefix
